--- a/internal/generator/bootstrap/gen.go.tmpl
+++ b/internal/generator/bootstrap/gen.go.tmpl
@@ -1,4 +1,5 @@
 package main
 
-//go:generate go generate {{ .api_package }}
+//go:generate go generate {{ .module }}/{{ .api_package }}
+//go:generate mkdir -p {{ .oapi_out_dir }}
 //go:generate oapi-codegen -package {{ .oapi_package_name }} -o {{ .oapi_out_file }} api/build/openapi.yaml
